examples/template.cfn.yaml
---
Description: VPC Networking + EKS Cluster + Worker Nodes
Parameters:
  CidrPrefix:
    Type: String
    Description: Prefix of the network ranges.
    Default: '10.0'
  KubernetesVersion:
    Type: String
    Default: '1.10'
  NodeInstanceType:
    Description: EC2 instance type for the node instances
    Type: String
    Default: t2.medium
    AllowedValues:
    - t2.small
    - t2.medium
    - t2.large
    - t2.xlarge
    - t2.2xlarge
    - m3.medium
    - m3.large
    - m3.xlarge
    - m3.2xlarge
    - m4.large
    - m4.xlarge
    - m4.2xlarge
    - m4.4xlarge
    - m4.10xlarge
    - m5.large
    - m5.xlarge
    - m5.2xlarge
    - m5.4xlarge
    - m5.12xlarge
    - m5.24xlarge
    - c4.large
    - c4.xlarge
    - c4.2xlarge
    - c4.4xlarge
    - c4.8xlarge
    - c5.large
    - c5.xlarge
    - c5.2xlarge
    - c5.4xlarge
    - c5.9xlarge
    - c5.18xlarge
    - i3.large
    - i3.xlarge
    - i3.2xlarge
    - i3.4xlarge
    - i3.8xlarge
    - i3.16xlarge
    - r3.xlarge
    - r3.2xlarge
    - r3.4xlarge
    - r3.8xlarge
    - r4.large
    - r4.xlarge
    - r4.2xlarge
    - r4.4xlarge
    - r4.8xlarge
    - r4.16xlarge
    - x1.16xlarge
    - x1.32xlarge
    - p2.xlarge
    - p2.8xlarge
    - p2.16xlarge
    - p3.2xlarge
    - p3.8xlarge
    - p3.16xlarge
  NodeAutoScalingGroupMinSize:
    Type: Number
    Description: Minimum size of Node Group ASG.
    Default: 2
  NodeAutoScalingGroupMaxSize:
    Type: Number
    Description: Maximum size of Node Group ASG.
    Default: 20
Mappings:
  Regional:
    us-east-1:
      NodeImageId: ami-dea4d5a1
    us-west-2:
      NodeImageId: ami-73a6e20b
  MaxPodsPerNode:
    c4.large:
      MaxPods: '29'
    c4.xlarge:
      MaxPods: '58'
    c4.2xlarge:
      MaxPods: '58'
    c4.4xlarge:
      MaxPods: '234'
    c4.8xlarge:
      MaxPods: '234'
    c5.large:
      MaxPods: '29'
    c5.xlarge:
      MaxPods: '58'
    c5.2xlarge:
      MaxPods: '58'
    c5.4xlarge:
      MaxPods: '234'
    c5.9xlarge:
      MaxPods: '234'
    c5.18xlarge:
      MaxPods: '737'
    i3.large:
      MaxPods: '29'
    i3.xlarge:
      MaxPods: '58'
    i3.2xlarge:
      MaxPods: '58'
    i3.4xlarge:
      MaxPods: '234'
    i3.8xlarge:
      MaxPods: '234'
    i3.16xlarge:
      MaxPods: '737'
    m3.medium:
      MaxPods: '12'
    m3.large:
      MaxPods: '29'
    m3.xlarge:
      MaxPods: '58'
    m3.2xlarge:
      MaxPods: '118'
    m4.large:
      MaxPods: '20'
    m4.xlarge:
      MaxPods: '58'
    m4.2xlarge:
      MaxPods: '58'
    m4.4xlarge:
      MaxPods: '234'
    m4.10xlarge:
      MaxPods: '234'
    m5.large:
      MaxPods: '29'
    m5.xlarge:
      MaxPods: '58'
    m5.2xlarge:
      MaxPods: '58'
    m5.4xlarge:
      MaxPods: '234'
    m5.12xlarge:
      MaxPods: '234'
    m5.24xlarge:
      MaxPods: '737'
    p2.xlarge:
      MaxPods: '58'
    p2.8xlarge:
      MaxPods: '234'
    p2.16xlarge:
      MaxPods: '234'
    p3.2xlarge:
      MaxPods: '58'
    p3.8xlarge:
      MaxPods: '234'
    p3.16xlarge:
      MaxPods: '234'
    r3.xlarge:
      MaxPods: '58'
    r3.2xlarge:
      MaxPods: '58'
    r3.4xlarge:
      MaxPods: '234'
    r3.8xlarge:
      MaxPods: '234'
    r4.large:
      MaxPods: '29'
    r4.xlarge:
      MaxPods: '58'
    r4.2xlarge:
      MaxPods: '58'
    r4.4xlarge:
      MaxPods: '234'
    r4.8xlarge:
      MaxPods: '234'
    r4.16xlarge:
      MaxPods: '737'
    t2.small:
      MaxPods: '8'
    t2.medium:
      MaxPods: '17'
    t2.large:
      MaxPods: '35'
    t2.xlarge:
      MaxPods: '44'
    t2.2xlarge:
      MaxPods: '44'
    x1.16xlarge:
      MaxPods: '234'
    x1.32xlarge:
      MaxPods: '234'
Resources:
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock:
        Fn::Join:
        - ''
        - - Ref: CidrPrefix
          - ".0.0/16"
      Tags:
      - Key: Name
        Value:
          Ref: AWS::StackName
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value:
          Ref: AWS::StackName
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: Vpc
      InternetGatewayId:
        Ref: InternetGateway
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - "-"
          - - Ref: AWS::StackName
            - public
  PublicToInternetRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId:
        Ref: PublicRouteTable
      GatewayId:
        Ref: InternetGateway
  PublicSubnet0:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock:
        Fn::Join:
        - ''
        - - Ref: CidrPrefix
          - ".0.0/22"
      MapPublicIpOnLaunch: true
      AvailabilityZone:
        Fn::Select:
        - 0
        - Fn::GetAZs:
            Ref: AWS::Region
      VpcId:
        Ref: Vpc
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - "-"
          - - Ref: AWS::StackName
            - public
            - '0'
  PublicSubnet0RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      SubnetId:
        Ref: PublicSubnet0
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock:
        Fn::Join:
        - ''
        - - Ref: CidrPrefix
          - ".4.0/22"
      MapPublicIpOnLaunch: true
      AvailabilityZone:
        Fn::Select:
        - 1
        - Fn::GetAZs:
            Ref: AWS::Region
      VpcId:
        Ref: Vpc
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - "-"
          - - Ref: AWS::StackName
            - public
            - '1'
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      SubnetId:
        Ref: PublicSubnet1
  PrivateRouteTable0:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - "-"
          - - Ref: AWS::StackName
            - private
            - '0'
  PrivateToInternetRoute0:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId:
        Ref: PrivateRouteTable0
      NatGatewayId:
        Ref: NatGateway0
  PrivateSubnet0:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock:
        Fn::Join:
        - ''
        - - Ref: CidrPrefix
          - ".8.0/22"
      MapPublicIpOnLaunch: false
      AvailabilityZone:
        Fn::Select:
        - 0
        - Fn::GetAZs:
            Ref: AWS::Region
      VpcId:
        Ref: Vpc
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - "-"
          - - Ref: AWS::StackName
            - private
            - '0'
  PrivateSubnet0RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable0
      SubnetId:
        Ref: PrivateSubnet0
  ElasticIp0:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  NatGateway0:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
        - ElasticIp0
        - AllocationId
      SubnetId:
        Ref: PublicSubnet0
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - "-"
          - - Ref: AWS::StackName
            - '0'
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - "-"
          - - Ref: AWS::StackName
            - private
            - '1'
  PrivateToInternetRoute1:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId:
        Ref: PrivateRouteTable1
      NatGatewayId:
        Ref: NatGateway1
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock:
        Fn::Join:
        - ''
        - - Ref: CidrPrefix
          - ".12.0/22"
      MapPublicIpOnLaunch: false
      AvailabilityZone:
        Fn::Select:
        - 1
        - Fn::GetAZs:
            Ref: AWS::Region
      VpcId:
        Ref: Vpc
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - "-"
          - - Ref: AWS::StackName
            - private
            - '1'
  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable1
      SubnetId:
        Ref: PrivateSubnet1
  ElasticIp1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
        - ElasticIp1
        - AllocationId
      SubnetId:
        Ref: PublicSubnet1
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - "-"
          - - Ref: AWS::StackName
            - '1'
  EKSServiceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Action: sts:AssumeRole
          Principal:
            Service: eks.amazonaws.com
      ManagedPolicyArns:
      - arn:aws:iam::aws:policy/AmazonEKSClusterPolicy
      - arn:aws:iam::aws:policy/AmazonEKSServicePolicy
  ControlPlaneSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Cluster communication with worker nodes
      VpcId:
        Ref: Vpc
  ControlPlaneEgressToNodeSecurityGroup:
    Type: AWS::EC2::SecurityGroupEgress
    DependsOn: NodeSecurityGroup
    Properties:
      Description: Allow the cluster control plane to communicate with worker Kubelet
        and pods
      GroupId:
        Ref: ControlPlaneSecurityGroup
      DestinationSecurityGroupId:
        Ref: NodeSecurityGroup
      IpProtocol: tcp
      FromPort: 1025
      ToPort: 65535
  ControlPlaneSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    DependsOn: NodeSecurityGroup
    Properties:
      Description: Allow pods to communicate with the cluster API Server
      GroupId:
        Ref: ControlPlaneSecurityGroup
      SourceSecurityGroupId:
        Ref: NodeSecurityGroup
      IpProtocol: tcp
      ToPort: 443
      FromPort: 443
  NodeSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for all nodes in the cluster
      VpcId:
        Ref: Vpc
      Tags:
      - Key:
          Fn::Join:
          - ''
          - - kubernetes.io/cluster/
            - Ref: EKSCluster
        Value: owned
  NodeSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    DependsOn: NodeSecurityGroup
    Properties:
      Description: Allow node to communicate with each other
      GroupId:
        Ref: NodeSecurityGroup
      SourceSecurityGroupId:
        Ref: NodeSecurityGroup
      IpProtocol: "-1"
      FromPort: 0
      ToPort: 65535
  EKSCluster:
    Type: AWS::EKS::Cluster
    Properties:
      RoleArn:
        Fn::GetAtt:
        - EKSServiceRole
        - Arn
      Version:
        Ref: KubernetesVersion
      ResourcesVpcConfig:
        SecurityGroupIds:
        - Fn::GetAtt:
          - ControlPlaneSecurityGroup
          - GroupId
        SubnetIds:
        - Ref: PublicSubnet0
        - Ref: PublicSubnet1
        - Ref: PrivateSubnet0
        - Ref: PrivateSubnet1
  NodeInstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - sts:AssumeRole
      Path: "/"
      ManagedPolicyArns:
      - arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy
      - arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy
      - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
  NodeInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
      - Ref: NodeInstanceRole
  NodeGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      DesiredCapacity:
        Ref: NodeAutoScalingGroupMinSize
      LaunchConfigurationName:
        Ref: NodeLaunchConfig
      MinSize:
        Ref: NodeAutoScalingGroupMinSize
      MaxSize:
        Ref: NodeAutoScalingGroupMaxSize
      VPCZoneIdentifier:
      - Ref: PrivateSubnet0
      - Ref: PrivateSubnet1
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: EKSCluster
            - "-Node"
        PropagateAtLaunch: true
      - Key:
          Fn::Join:
          - ''
          - - kubernetes.io/cluster/
            - Ref: EKSCluster
        Value: owned
        PropagateAtLaunch: true
  NodeLaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      IamInstanceProfile:
        Ref: NodeInstanceProfile
      ImageId:
        Fn::FindInMap:
        - Regional
        - Ref: AWS::Region
        - NodeImageId
      InstanceType:
        Ref: NodeInstanceType
      SecurityGroups:
      - Fn::GetAtt:
        - NodeSecurityGroup
        - GroupId
      UserData:
        Fn::Base64:
          Fn::Join: [
            "",
            [
              "#!/bin/bash -xe\n",
              "CA_CERTIFICATE_DIRECTORY=/etc/kubernetes/pki", "\n",
              "CA_CERTIFICATE_FILE_PATH=$CA_CERTIFICATE_DIRECTORY/ca.crt", "\n",
              "MODEL_DIRECTORY_PATH=~/.aws/eks", "\n",
              "MODEL_FILE_PATH=$MODEL_DIRECTORY_PATH/eks-2017-11-01.normal.json", "\n",
              "mkdir -p $CA_CERTIFICATE_DIRECTORY", "\n",
              "mkdir -p $MODEL_DIRECTORY_PATH", "\n",
              "curl -o $MODEL_FILE_PATH https://s3-us-west-2.amazonaws.com/amazon-eks/1.10.3/2018-06-05/eks-2017-11-01.normal.json", "\n",
              "aws configure add-model --service-model file://$MODEL_FILE_PATH --service-name eks", "\n",
              "aws eks describe-cluster --region=", { Ref: "AWS::Region" }," --name=", { Ref: EKSCluster }," --query 'cluster.{certificateAuthorityData: certificateAuthority.data, endpoint: endpoint}' > /tmp/describe_cluster_result.json", "\n",
              "cat /tmp/describe_cluster_result.json | grep certificateAuthorityData | awk '{print $2}' | sed 's/[,\"]//g' | base64 -d >  $CA_CERTIFICATE_FILE_PATH", "\n",
              "MASTER_ENDPOINT=$(cat /tmp/describe_cluster_result.json | grep endpoint | awk '{print $2}' | sed 's/[,\"]//g')", "\n",
              "INTERNAL_IP=$(curl -s http://169.254.169.254/latest/meta-data/local-ipv4)", "\n",
              "sed -i s,MASTER_ENDPOINT,$MASTER_ENDPOINT,g /var/lib/kubelet/kubeconfig", "\n",
              "sed -i s,CLUSTER_NAME,", { Ref: EKSCluster }, ",g /var/lib/kubelet/kubeconfig", "\n",
              "sed -i s,REGION,", { Ref: "AWS::Region" }, ",g /etc/systemd/system/kubelet.service", "\n",
              "sed -i s,MAX_PODS,", { "Fn::FindInMap": [ MaxPodsPerNode, { Ref: NodeInstanceType }, MaxPods ] }, ",g /etc/systemd/system/kubelet.service", "\n",
              "sed -i s,MASTER_ENDPOINT,$MASTER_ENDPOINT,g /etc/systemd/system/kubelet.service", "\n",
              "sed -i s,INTERNAL_IP,$INTERNAL_IP,g /etc/systemd/system/kubelet.service", "\n",
              "DNS_CLUSTER_IP=10.100.0.10", "\n",
              "if [[ $INTERNAL_IP == 10.* ]] ; then DNS_CLUSTER_IP=172.20.0.10; fi", "\n",
              "sed -i s,DNS_CLUSTER_IP,$DNS_CLUSTER_IP,g  /etc/systemd/system/kubelet.service", "\n",
              "sed -i s,CERTIFICATE_AUTHORITY_FILE,$CA_CERTIFICATE_FILE_PATH,g /var/lib/kubelet/kubeconfig" , "\n",
              "sed -i s,CLIENT_CA_FILE,$CA_CERTIFICATE_FILE_PATH,g  /etc/systemd/system/kubelet.service" , "\n",
              "systemctl daemon-reload", "\n",
              "systemctl restart kubelet", "\n",
              "/opt/aws/bin/cfn-signal -e $? ",
              "         --stack ", { Ref: "AWS::StackName" },
              "         --resource NodeGroup ",
              "         --region ", { Ref: "AWS::Region" }, "\n"
            ]
          ]
Outputs:
  EKSClusterName:
    Value:
      Ref: EKSCluster
  EKSClusterEndpoint:
    Value:
      Fn::GetAtt:
      - EKSCluster
      - Endpoint
  EKSClusterCertificateAuthorityData:
    Value:
      Fn::GetAtt:
      - EKSCluster
      - CertificateAuthorityData
  NodeInstanceRole:
    Value:
      Fn::GetAtt:
      - NodeInstanceRole
      - Arn
